<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">Tv Shows</string>
    <string name="popularity">Popularity</string>
    <string name="overview">Overview</string>

    <string name="app_name">My Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">title</string>
    <string name="date">date</string>
    <string name="original_title">Original title</string>
    <string name="titikdua">:</string>
    <string name="original_language">Original language</string>
    <string name="release_date">Release date</string>
    <string name="detail">Detail</string>
    <string name="favorite_item">Favorite item</string>
    <string name="favorite">Favorite</string>
    <string name="title_favorite">Favorite</string>

</resources>