<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <item
            android:id="@+id/action_favorite"
            android:icon="@drawable/ic_unfavorite24"
            app:showAsAction="always"
            android:title="@string/favorite_item"/>



</menu>