<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tvshows.TvShowsFavListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTvShowsFavList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:visibility="visible"
        tools:visibility="visible" />



    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_fav_tv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal|center_vertical"
        app:lottie_autoPlay="true"
        app:lottie_fileName="emptybox.json"
        app:lottie_loop="true" />

</FrameLayout>